--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
   ~ limitations under the License.
   -->
 
+
 <resources>
 
     <!-- App title and fragment titles -->
@@ -42,7 +43,7 @@
     <string name="hours_slept"><![CDATA[<b>Hours:Minutes:Seconds</b>]]></string>
 
     <!-- Sleep quality strings -->
-    <string name="how_was_hour_sleep">How was your sleep?</string>
+    <string name="how_was_your_sleep">How was your sleep?</string>
     <string name="zero_very_bad">Very bad</string>
     <string name="one_poor">Poor</string>
     <string name="two_soso">So-so</string>
@@ -52,6 +53,9 @@
 
     <!-- Toast to play after Clear button has been pressed -->
     <string name="cleared_message">All your data is gone forever.</string>
-    <string name="how_was_your_sleep">How was your sleep?</string>
-
+    <string name="header_text">Sleep Results</string>
+    <string name="close">Close</string>
+    <string name="minutes_length">%d minutes on %s</string>
+    <string name="hours_length">%d hours on %s</string>
+    <string name="seconds_length">%d seconds on %s</string>
 </resources>
